site/sass/parts/_triptych.scss
.triptych {
  overflow: hidden;
  a {
    display: block;
    text-decoration: none;
    color: $white;

    article {
      box-sizing: border-box;
      padding: 15%;
      text-align: center;
    }

    h2 {
      font-family: $font-family-alternative-to;
      font-weight: normal;
      font-size: 3rem;
      margin-bottom: 0;
      letter-spacing: .2rem;
    }

    hr {
      margin: 1rem 45%;
    }

    &.activiteiten {
      hr {
        border-color: $orange;
      }
      article {
        background: linear-gradient(to bottom, rgba(182, 131, 101, .6) 0%, rgba(29, 44, 49, .6) 100%);
      }
    }

    &.over-ons {
      hr {
        border-color: $green;
      }
      article {
        background: linear-gradient(to bottom, rgba(155, 181, 172, .6) 0%, rgba(29, 44, 49, .6) 100%);
      }
    }

    &.stories {
      hr {
        border-color: $blue;
      }
      article {
        background: linear-gradient(to bottom, rgba(95, 97, 107, .6) 0%, rgba(29, 44, 49, .6) 100%);
      }
    }

    p {
      font-family: $font-family-alternative;
      font-size: 1.5rem;
      font-weight: 300;
    }
  }
}

@media (#{$bp-larger-than-tablet}) {
  .triptych > a {
    float: left;
    width: 33.333334%;

    background: $white no-repeat center center;
    background-size: cover;

    min-height: 100vh;

    article {
      padding-top: 32rem;

      min-height: inherit;
    }

    &:hover article {
      background: none;
    }
  }
}

// hide images when we start wrapping (tablet or smaller)
@media ("max-width: 750px") {
  .triptych > a {
    background-image: none !important;
  }
}

